[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/level.gd" type="Script" id=4]

[node name="level" type="Node2D"]
script = ExtResource( 4 )

[node name="camera" parent="." instance=ExtResource( 3 )]

[node name="ui" parent="." instance=ExtResource( 2 )]

[node name="transition" parent="." instance=ExtResource( 1 )]

[node name="boundary" type="StaticBody2D" parent="."]
[connection signal="right_click" from="ui" to="." method="_on_ui_right_click"]
[connection signal="right_click_drag" from="ui" to="." method="_on_ui_right_click_drag"]
[connection signal="selection" from="ui" to="." method="_on_ui_selection"]
